Improved printing support
The new print progress dialog allows to manually start new pages and to
finish printing explicitly.

--- a/help/printer_ru.html
+++ b/help/printer_ru.html
@@ -16,13 +16,19 @@
   <li>Вывод текста в кодировке Windows-1251 в текстовый файл;</li>
   <li>Вывод текста и графики в многостраничный графический файл формата TIFF;</li>
   <li>Вывод текста и графики на принтер Windows (в т.ч. для сохранения в формате PDF).</li>
+  <li>Вывод напрямую в параллельный порт для печати на подключённом к нему принтере, совместимом с эмулируемой системой (например Агат или Эппл).</li>
 </ol>
 <p>Активизация модуля производится автоматически в поддерживающих его программах (например, <strong>Агат-Автор</strong>), либо вручную командой <strong>PR#n</strong>, где <strong>n</strong> - номер слота.</p>
 <p>При запуске печати открывается окно выбора файла (тип файла выбирается в зависимости от настроек модуля):</p>
 <p align="center"><img src="ru/selprint.png" alt="Выбор файла печати" width="748" height="514" /></p>
 <p>По умолчанию файлы печати размещаются в подкаталоге <strong>print</strong> каталога эмулятора.</p>
 <p>Если в окне выбора печати нажать &quot;<em>Отмена</em>&quot;, вывод данных будет временно отключен, до завершения текущего сеанса печати. </p>
-<p>После завершения вывода данных на принтер из эмулируемой системы, необходимо выбрать пункт &quot;<em>Закончить печать</em>&quot; <a href="context_ru.html">контекстного меню</a> системы. Это позволит завершить формирование текущего выходного файла и организовать последующий вывод в новые файлы.</p>
+<p>При печати в файл TIFF и на принтер Windows эмулятор выводит дополнительное окно, которое отображает информацию о прогрессе печати: номере текущей страницы, количестве байт, отправленных на принтер в пределах текущей страницы, и общем количестве отправленных на принтер данных. Кроме того, отображаются две кнопки: "Вставить новую страницу" и "Закончить печать."</p>
+<p align="center"><img src="ru/printprogress.png" alt="Диалог печати в TIFF и на принтер Windows" width="326" height="205"/> <img src="ru/printprogress2.png" alt="Диалог печати в текстовый файл и в файл без преобразования" width="326" height="134"/></p>
+<p>Кнопка "Вставить новую страницу" необходима потому, что программы печати для Агата не рассчитаны на автоматическую подачу бумаги и не посылают никаких специальных команд на принтер для перевода страницы. Они рассчитывают, что пользователь сам увидит, что страница отпечатана, и вставит новый лист вручную. "Вставить новую страницу" позволяет эмулировать ручную подачу бумаги. Судить о том, закончилась ли печать текущей страницы, можно по поведению эмулируемой программы. Например, ТОР после печати каждой страницы отображает диалог "Вставьте следующую страницу," а когда печать полностью завершена, появляется возможность перемещать курсор по меню печати. Кроме того, во время передачи данных на принтер мигает иконка в окне информации, а счетчики переданных данных увеличиваются.</p>
+<p>Кнопка "Закончить печать" нужна для того, чтобы закончить печать последней страницы, освободить системные ресурсы и спрятать окно прогресса. Кроме того, при печати в TIFF "Закончить печать" завершает формирование многостраничного TIFF-документа.</p>
+<p>При печати в текстовый файл и в файл без обработки выводится упрощённое окно прогресса, которое содержит только общее количество отправленных на принтер данных и кнопку "Закончить печать." В этих форматах ручное управление страницами не требуется.</p>
+<p>Наконец, при прямой печати на параллельный порт компьютера никаких диалоговых окон не выводится. Управление портом происходит автоматически, а замена страниц &ndash; так, как если бы к принтеру был подключён реальный Агат.</p>
 <p>См. также: <a href="chsystem_ru.html">Изменение конфигурации</a>, <a href="devinfo_ru.html">Описание и настройка устройств</a>, <a href="hardware_ru.html">Поддерживаемое оборудование</a>, <a href="index_ru.html">Главное меню</a></p>
 </body>
 
